--- a/wp-content/themes/ilc/scss/components/home/latest-posts.scss
+++ b/wp-content/themes/ilc/scss/components/home/latest-posts.scss
@@ -16,20 +16,23 @@
 	}
 
 	.post-container {
-		@include span-columns(6);
+		width: 100%;
+		display: inline-block;
+		margin-bottom: 20px;
+		@include breakpoint(large) { @include span-columns(6); }
 		background: white;
 		height: 100%;
 	}
 
 	.post-image {
-		@include span-columns(5);
+		@include breakpoint(small) { @include span-columns(5); }
 		background: $lite-grey;
 		height:100%;
 		min-height: 300px;
 	}
 
 	.post-content {
-		@include span-columns(7);
+		@include breakpoint(small) { @include span-columns(7); }
 		padding:2em;
 		// padding-bottom:2em;
 
